# microsoft-graph-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  authenticate.py  fastmcp.json  mcp-tools.json  pyproject.toml  railway.json
.xbp/: xbp.yaml
src/microsoft_graph_mcp/: __init__.py  auth.py  graph.py  server.py  tools.py
src/microsoft_mcp/: auth.py
tests/: test_integration.py
